--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
 .env
 .env.backup
 .phpunit.result.cache
@@ -10,3 +9,59 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+
+# Created by .ignore support plugin (hsz.mobi)
+### Addons
+/addons
+
+.ash_history
+.cache/
+.config/
+.docker/
+.local/
+
+### Composer template
+/vendor/
+
+# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
+# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
+# composer.lock
+### Yii template
+#assets/*
+!assets/.gitignore
+protected/runtime/*
+!protected/runtime/.gitignore
+protected/data/*.db
+themes/classic/views/
+
+## PhpStorm project files
+.idea
+
+## File-based project format:
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+/docker/nginx/src/
+/composer.phar
+
+**/.env.override
+**/docker-compose.override.yml
+
+/private.key
+
+metrics
