--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
     container_name: webserver
     restart: unless-stopped
     tty: true
+    depends_on:
+      - back
     ports:
       - "8000:80"
       - "443:443"
