--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,9 @@
 {
-    "name": "laravel/laravel",
+    "name": "wannapizza/backend",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
-    "license": "MIT",
+    "description": "wanna.pizza backend",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.4||^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
