--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -40,6 +40,8 @@ RUN useradd -u 1000 -ms /bin/bash -g www www
 # Copy existing application directory contents
 COPY . /var/www
 
+RUN composer install --working-dir=/var/www --prefer-dist --optimize-autoloader
+
 # Copy existing application directory permissions
 COPY --chown=www:www . /var/www
 
