Update crawlers and backend

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "wanna.pizza backend",
     "require": {
         "php": "^7.4||^8.0",
+        "ext-json": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
